fix alignment for the last month updates

--- a/the_board_game_tracker/static/css/project.css
+++ b/the_board_game_tracker/static/css/project.css
@@ -105,6 +105,10 @@ form > input[type="submit"] {
   width: 100px;
 }
 
+.updates-player-games {
+  text-align: left;
+}
+
 .updates-player {
   text-decoration: underline;
   /* font-style: oblique; */
